--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -799,30 +799,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 37,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
-        "outputId": "f95cbfdb-82c2-4023-e1ea-c11c31acd45f"
+        "outputId": "a1132b93-9b3b-47b1-bb2d-8d2ab0f26f20"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
-            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
-            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
-            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
-            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
-            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
-            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
-            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
-            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
-            "[ 1 1 1 1 1 1 1 1 1 1 ]\n"
+            "[1 1 1 1 1 1 1 1 1 1]\n",
+            "[1 1 1 1 1 1 1 1 1 1]\n",
+            "[1 1 1 1 1 1 1 1 1 1]\n",
+            "[1 1 1 1 1 1 1 1 1 1]\n",
+            "[1 1 1 1 1 1 1 1 1 1]\n",
+            "[1 1 1 1 1 1 1 1 1 1]\n",
+            "[1 1 1 1 1 1 1 1 1 1]\n",
+            "[1 1 1 1 1 1 1 1 1 1]\n",
+            "[1 1 1 1 1 1 1 1 1 1]\n",
+            "[1 1 1 1 1 1 1 1 1 1]\n"
           ]
         }
       ],
@@ -845,41 +845,62 @@
         "    \"\"\"\n",
         "    Read the matrix and store as part of the class object\n",
         "    \"\"\"\n",
-        "    def __init__(self, value=None, dim=(1, 1)):\n",
-        "        if value is None:\n",
-        "            self.value = [[1 for _ in range(dim[1])] for _ in range(dim[0])]\n",
-        "        elif isinstance(value, list):\n",
+        "    def __init__(self, value={}, dim=(1, 1)):\n",
+        "        self.value = value\n",
+        "        self.shape = dim\n",
+        "        if isinstance(value, list):\n",
         "            if len(value) > 0:\n",
-        "                if isinstance(value[0], (int, float)):\n",
-        "                    row_type = (int, float)\n",
+        "                if isinstance(value[0], (int, float)):  # Check if first element is numeric\n",
+        "                    row = (int, float)  # Set row type accordingly\n",
+        "                elif isinstance(value[0], list):  # Check if first element is a list\n",
+        "                    row = list  # Set row type to list\n",
+        "                    for inner_list in value:  # Iterate over rows\n",
+        "                        for element in inner_list:  # Iterate over elements in row\n",
+        "                            if not isinstance(element, (int, float)):\n",
+        "                                raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
         "                else:\n",
-        "                    row_type = type(value[0])\n",
+        "                    raise RuntimeError(\"Matrix is invalid. Please ensure that the first element is either a number or a list.\")\n",
         "\n",
-        "                for i in value:\n",
-        "                    if not isinstance(i, list):\n",
-        "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all rows are lists.\")\n",
-        "                    if len(i) != len(value[0]):\n",
-        "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all rows have uniform length.\")\n",
-        "                    for j in i:\n",
-        "                        if not isinstance(j, (int, float)):\n",
-        "                            raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
-        "\n",
-        "                self.value = value\n",
-        "                self.shape = (len(value), len(value[0]))\n",
-        "            else:\n",
-        "                raise ValueError(\"Matrix cannot be empty.\")\n",
+        "                # Check row uniformity and update attributes\n",
+        "                if row is list:\n",
+        "                    lenInner = len(value[0])\n",
+        "                    for i in value:\n",
+        "                        if len(i) != lenInner:\n",
+        "                            raise RuntimeError(\"Matrix is invalid. Please ensure that all rows have uniform length.\")\n",
+        "                    self.value = value\n",
+        "                    self.shape = (len(value), len(value[0]))  # Set shape for list of lists\n",
+        "                else:\n",
+        "                    self.value = value\n",
+        "                    self.shape = (len(value), 1)  # Set shape for vector\n",
+        "            else:  # Empty list case\n",
+        "                self.value = []  # Assign empty list\n",
+        "                self.shape = (0, 0)  # Set shape to (0, 0)\n",
+        "        elif value == {}: # Handle empty dictionary case\n",
+        "                matrix = []\n",
+        "                for i in range(dim[0]):\n",
+        "                    row = []\n",
+        "                    for j in range(dim[1]):\n",
+        "                        row.append(1)\n",
+        "                    matrix.append(row)\n",
+        "                self.value = matrix\n",
+        "                self.shape = dim  # Assign given dimensions to shape\n",
         "        else:\n",
-        "            raise ValueError(\"Invalid input: value must be a list or None.\")\n",
+        "            raise RuntimeError(\"Invalid input value. Please provide a list or an empty dictionary.\")\n",
         "\n",
+        "    \"\"\"\n",
+        "    Print the matrix to screen\n",
+        "    \"\"\"\n",
         "    def __repr__(self):\n",
-        "        string = \"\"\n",
-        "        for row in self.value:\n",
-        "            string += \"[ {} ]\\n\".format(\" \".join(str(elem) for elem in row))\n",
-        "        return string.strip()  # Ensure no extra newline at the end\n",
+        "      string = \"\"\n",
+        "      for row in self.value:\n",
+        "        string += \"[{}]\\n\".format(\" \".join(str(elem) for elem in row))\n",
         "\n",
-        "# Example usage\n",
+        "      return string.strip()\n",
+        "\n",
+        "\n",
         "matrix_10x10 = Matrix(dim=(10, 10))\n",
-        "print(matrix_10x10)  # This should print a 10x10 matrix of ones\n"
+        "print(matrix_10x10)\n",
+        "\n"
       ]
     }
   ],
